Closed
Bug 201248
Opened 23 years ago
Closed 20 years ago
Filter/Junk Mail log should honour date-and-time notation format used in OS
Categories
(MailNews Core :: Filters, defect)
MailNews Core
Filters
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.7beta
People
(Reporter: cnst+bmo, Assigned: cnst+bmo)
References
(Depends on 1 open bug)
Details
(Keywords: intl, l12y, polish)
Attachments
(2 files)
|
25.75 KB,
image/png
|
Details | |
|
2.29 KB,
patch
|
smontagu
:
review+
roc
:
superreview+
chofmann
:
approval1.7b+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.3) Gecko/20030312
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.3) Gecko/20030312
The date-and-time notation in the filter log is incorrect. Mozilla uses PM and
AM (the American notation), not used in almost the whole civilised world (except
for the USA). In the operating system the date and time format is set to
yyyy-MM-dd and HH:mm:ss respectively. The date-and-time notation in other
Mozilla components (including mail) seems to be correct.
Reproducible: Always
Steps to Reproduce:
1. If you have selected 'US' in the 'Regional and Language Options', then change
the date and time format to yyyy-MM-dd and HH:mm:ss respectively.
2. Enable filter log.
3. Run filters; see the results in the filter log with the incorrect
date-and-time notation.
Actual Results:
Filter log:
"Applied filter "blah-blah" to message from blah-blah-blah - blah at 04/07/2003
09:41 AM
Action = Move to folder imap://user@server/INBOX/folder
id = 200304071341.h37DfVP2004867@freefall.freebsd.org"
Expected Results:
Filter log:
"Applied filter "blah-blah" to message from blah-blah-blah - blah at 2003-04-07
09:41
Action = Move to folder imap://user@server/INBOX/folder
id = 200304071341.h37DfVP2004867@freefall.freebsd.org"
| Assignee | ||
Comment 1•23 years ago
|
||
*** Bug 201249 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 2•23 years ago
|
||
This bug prevents me from testing the filter log feature of the mail-client.
Summary: The date-and-time notation in 'Filter log' is incorrect. → The date-and-time notation in 'Filter log' is incorrect.
| Assignee | ||
Comment 3•22 years ago
|
||
| Assignee | ||
Comment 4•22 years ago
|
||
Verified bug on FreeBSD build.
OS: All.
OS: Windows XP → All
Hardware: PC → All
Summary: The date-and-time notation in 'Filter log' is incorrect. → Filter/Junk Mail log should honour date-and-time notation format used in OS
| Assignee | ||
Comment 5•22 years ago
|
||
I assume, we need to change these lines:
<http://lxr.mozilla.org/mozilla/source/mailnews/base/search/src/nsMsgFilter.cpp#366>
366 rv = aMsgHdr->GetDate(&date);
367 PRExplodedTime exploded;
368 PR_ExplodeTime(date, PR_LocalTimeParameters, &exploded);
369 PR_FormatTimeUSEnglish(dateStr, 100, "%m/%d/%Y %I:%M %p", &exploded);
<http://lxr.mozilla.org/mozilla/source/mailnews/base/src/nsSpamSettings.cpp#467>
466 rv = aMsgHdr->GetDate(&date);
467 PRExplodedTime exploded;
468 PR_ExplodeTime(date, PR_LocalTimeParameters, &exploded);
469 PR_FormatTimeUSEnglish(dateStr, 100, "%m/%d/%Y %I:%M %p", &exploded);
It is also kind of odd that we do not test rv status...
| Assignee | ||
Updated•22 years ago
|
Blocks: dateandtime
Comment 7•22 years ago
|
||
confirming and taking
Assignee: naving → jshin
Severity: normal → enhancement
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 8•22 years ago
|
||
(In reply to comment #7)
> confirming and taking
Please, take a look at patch #124918, from bug #207550, as it is related and
should be applied to fix the hard-coded localisation strings.
| Assignee | ||
Comment 9•22 years ago
|
||
This is a temporary patch, until bug #207550 is resolved. It uses ISO8601
notation for Date and Time, also known as SQL date string (YYYY-MM-DD
HH:MM:SS). I also added seconds, since log-files must be rather accurate.
Assignee: jshin → cnst+bmo
Status: NEW → ASSIGNED
| Assignee | ||
Updated•22 years ago
|
Severity: enhancement → normal
Target Milestone: --- → mozilla1.7beta
| Assignee | ||
Comment 10•22 years ago
|
||
Comment on attachment 142889 [details] [diff] [review]
ISO8601-compliance patch
The advantages of the ISO 8601 notation can be found here:
<http://www.cl.cam.ac.uk/~mgk25/iso-time.html> (A Summary of the International
Standard Date and Time Notation).
(It is a good-enough compromise for both American and European users.)
Attachment #142889 -
Flags: superreview?(roc)
Comment 11•22 years ago
|
||
Comment on attachment 142889 [details] [diff] [review]
ISO8601-compliance patch
r=smontagu, but please add a comment repeating what you say in comment 9 before
checking in.
Attachment #142889 -
Flags: review+
Attachment #142889 -
Flags: superreview?(roc) → superreview+
Comment 12•22 years ago
|
||
Comment on attachment 142889 [details] [diff] [review]
ISO8601-compliance patch
sure, moa=bienvenu
| Assignee | ||
Updated•22 years ago
|
Attachment #142889 -
Flags: approval1.7b?
Comment 13•22 years ago
|
||
Comment on attachment 142889 [details] [diff] [review]
ISO8601-compliance patch
a=chofmann for 1.7b
Attachment #142889 -
Flags: approval1.7b? → approval1.7b+
| Assignee | ||
Comment 14•22 years ago
|
||
Comment on attachment 142889 [details] [diff] [review]
ISO8601-compliance patch
Checked in by neil on 2004-03-12 15:53 PST.
Updated•21 years ago
|
Product: MailNews → Core
Comment 15•20 years ago
|
||
Fixed by the checkin to bug 207550
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•