Bug 201248 Change filter/spam logging to ISO time as an interim measure until logging can be localized p=cnst+moz@bugmail.mojo.ru r=smontagu sr=roc moa=bienvenu a=chofmann